--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="center jumbotron">
+	<h1>Japan Printing & Graphics Price Checker</h1>
+
+	<h2>Please <%= link_to "log in", '#' %> to access the price estimate form.</h2>
+
+	<%= link_to "Sign Up Now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
