--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,6 @@
 
 	<h2>Please <%= link_to "log in", '#' %> to access the price estimate form.</h2>
 
-	<%= link_to "Sign Up Now!", '#', class: "btn btn-lg btn-primary" %>
+	<%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
