Add pending activation page, controller and mailers.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
 	<h1>Japan Printing & Graphics Price Checker</h1>
 
-	<h2>Please <%= link_to "log in", '#' %> to access the price estimate form.</h2>
+	<h2>Please <%= link_to "log in", login_path %> to access the price estimate form.</h2>
 
 	<%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
