Add revised login functionality with admin approval process.

--- a/app/views/user_mailer/admin_request.html.erb
+++ b/app/views/user_mailer/admin_request.html.erb
@@ -4,7 +4,7 @@
 
 <p><%= @user.name %> has signed up for to use the price checker.</p>
 
-<p>Please visit the <%= link_to "pending activations", pending_activations_path %> page to confirm or deny <%= @user.name %>.</p>
+<p>Please visit the <%= link_to "pending activations", pending_activations_url %> page to confirm or deny <%= @user.name %>.</p>
 
 Thanks,
 
