--- a/app/views/pending_activations/index.html.erb
+++ b/app/views/pending_activations/index.html.erb
@@ -14,6 +14,8 @@
 			<%= render partial: 'pending_activations/pending_users', locals: { user: user } %>
 		<% end %>
 	</ul>
+	
+	<%= will_paginate %>
 
 <% end %>
 
