--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,17 @@
-<div class="center jumbotron">
-	<h1>Japan Printing & Graphics Price Checker</h1>
+<% if logged_in? %>
+	<div class="row">
+		<div class="center jumbotron">
+			<h1>Logged in View</h1>
+			<p>Main form goes here.</p>
+		</div>
+	</div>
+<% else %>
+	<div class="center jumbotron">
+		<h1>Japan Printing & Graphics Price Checker</h1>
 
-	<h2>Please <%= link_to "log in", login_path %> to access the price estimate form.</h2>
+		<h2>Please <%= link_to "log in", login_path %> to access the price estimate form.</h2>
 
-	<%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+		<%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
+	</div>
+<% end %>
 
