--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,32 @@
 <% if logged_in? %>
+
 	<div class="row">
-		<div class="center jumbotron">
-			<h1>Logged in View</h1>
-			<p>Main form goes here.</p>
+		<div ng-controller="infoController">
+			<% if flash[:error] %>
+				<h4 class="error text-center"><%= flash[:error] %></h4>
+			<% elsif flash[:success] %>
+				<h4 class="success text-center"><%= flash[:success] %></h4>
+			<% else %>
+			<% end %>
+
+			<div class="search-form">
+					<h1 class="text-center">Search</h1>
+					<%= render 'search_form' %>
+			</div>
+
+			<div class="new-bc-form hide">
+				<h1 class="text-center">Enter New BC</h1>
+				<%= render 'new_bc_form' %>
+
+				<div class="similar-products"></div>
+
+				<%= render 'load_more_form' %>
+			</div>
 		</div>
 	</div>
+
 <% else %>
+
 	<div class="center jumbotron">
 		<h1>Japan Printing & Graphics Price Checker</h1>
 
@@ -13,5 +34,6 @@
 
 		<%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
 	</div>
+
 <% end %>
 
