--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	  <%= csrf_meta_tags %>
 	  <%= render 'layouts/shim' %>
 	</head>
-	<body>
+	<body ng-app="bcApp">
 		<%= render 'layouts/header' %>
 		<div class="container">
 			<% flash.each do |message_type, message| %>
