--- a/app/views/static_pages/_load_more_form.html.erb
+++ b/app/views/static_pages/_load_more_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag('more', :method => "get", :remote => true, :class => "load-more more hide") do %>
+<%= form_tag('/more', :method => "get", :remote => true, :class => "load-more more hide") do %>
 
 	<div class="form-group hide">
 		<%= label_tag 'print_method' %>
