Style labels and selects on search form.

--- a/app/views/paper_types/_form.html.erb
+++ b/app/views/paper_types/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field hidden">
     <%= f.label :brand %><br>
     <%= f.text_field :brand %>
   </div>
