--- a/app/views/paper_types/index.html.erb
+++ b/app/views/paper_types/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Brand</th>
+      <!-- <th>Brand</th> -->
       <th>Name</th>
       <th>Color</th>
       <th>Thickness</th>
@@ -16,7 +16,7 @@
   <tbody>
     <% @paper_types.each do |paper_type| %>
       <tr>
-        <td><%= paper_type.brand %></td>
+        <!-- <td><%= paper_type.brand %></td> -->
         <td><%= paper_type.name %></td>
         <td><%= paper_type.color %></td>
         <td><%= paper_type.thickness %></td>
