--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -81,12 +81,66 @@ p {
 }
 
 
+/* page body */
+
+.page-content {
+	margin-bottom: 100px;
+}
+
+.search-form-group {
+	width: 100%;
+	height: 40px;
+	label {
+		margin-top: 7px;
+	}
+	select, option {
+		/*color: #337ab7;*/
+		/*color: #3366CC;*/
+		color: #1abb9c;
+		border: none;
+		box-shadow: none;
+		font-weight: bold;
+		cursor: pointer;
+	}
+
+	select {
+		-webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+	}
+
+	.form-control:focus {
+		border: none;
+		box-shadow: none;
+	}
+}
+
+.search-form-control {
+	float: right;
+	width: auto;
+}
+
+.edit {
+	color: #cccccc;
+	margin-left: 5px;
+	font-size: .9em;
+}
+
+.btn-primary {
+	background: #1abb9c;
+	border: none;
+	height: 50px !important;
+}
+
+
 /* footer */
 
 footer {
+	clear: both;
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
+  height: 80px;
   color: $gray-light;
   a {
     color: $gray;
