--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,16 @@
 	<body ng-app="bcApp">
 		<%= render 'layouts/header' %>
 		<div class="container">
-			<% flash.each do |message_type, message| %>
-				<div class="alert alert-<%= message_type %>"><%= message %></div>
-			<% end %>
+			<div class="page-content col-sm-6 col-sm-offset-3">
 
-			<%= yield %>
-			
+				<% flash.each do |message_type, message| %>
+					<div class="alert alert-<%= message_type %>"><%= message %></div>
+				<% end %>
+
+				<%= yield %>
+
+			</div>
 			<%= render 'layouts/footer' %>
-			<%= debug(params) if Rails.env.development? %>
 		</div>
 	</body>
 </html>
