--- a/app/views/static_pages/_search_form.html.erb
+++ b/app/views/static_pages/_search_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_tag('/search', :method => "get", :remote => true, :class => "search") do %>
 
 	<div class="form-group search-form-group">
-		<%= label_tag 'print_method' %>
+		<%= label_tag 'print_method', 'Print Method' %>
 		<%= select_tag 'print_method_id', options_for_select(print_methods), {"ng-model" => "data.print_method_id", "class" => "form-control search-form-control", 'dir' => 'rtl'} %>
 	</div>
 
 	<div class="form-group search-form-group">
-		<%= label_tag 'ink_colors' %>
+		<%= label_tag 'ink_colors', 'Ink Colors' %>
 		<%= select_tag 'ink_color_id', options_for_select(ink_colors), {"ng-model" => "data.ink_color_id", "class" => "form-control search-form-control", 'dir' => 'rtl'} %>
 	</div>
 
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="form-group search-form-group">
-		<%= label_tag 'raised_inks' %>
+		<%= label_tag 'raised_inks', 'Raised Inks' %>
 		<%= select_tag 'raised_ink_id', options_for_select(raised_inks), {"ng-model" => "data.raised_ink_id", "class" => "form-control search-form-control", 'dir' => 'rtl'} %>
 	</div>
 
@@ -38,7 +38,7 @@
 	</div>
 
 	<div class="form-group search-form-group">
-		<%= label_tag 'box_counts' %><a class="edit-menu" href="/box_counts"><i class="edit glyphicon glyphicon-plus"></i></a>
+		<%= label_tag 'box_counts', 'Box Count' %><a class="edit-menu" href="/box_counts"><i class="edit glyphicon glyphicon-plus"></i></a>
 		<%= select_tag 'box_count_id', options_for_select(box_counts), {"ng-model" => "data.box_count_id", "class" => "form-control search-form-control", 'dir' => 'rtl'} %>
 	</div>
 
@@ -48,7 +48,7 @@
 	</div>
 
 	<div class="form-group search-form-group">
-		<%= label_tag 'paper_types' %><a class="edit-menu" href="/paper_types"><i class="edit glyphicon glyphicon-plus"></i></a>
+		<%= label_tag 'paper_types', 'Paper Type' %><a class="edit-menu" href="/paper_types"><i class="edit glyphicon glyphicon-plus"></i></a>
 		<%= select_tag 'paper_type_id', options_for_select(paper_types), {"ng-model" => "data.paper_type_id", "class" => "form-control search-form-control", 'dir' => 'rtl'} %>
 	</div>
 
@@ -64,7 +64,7 @@
 		</span>
 	</h3>
 
-	<div class="details">
+	<div class="details hide">
 
 		<h4 id="production-cost">
 			Production Cost: 
@@ -92,8 +92,10 @@
 	</div>
 
 	<div class="details-button">
-		<div class="details-line"></div>
-		<i class="glyphicon glyphicon-plus"></i>
+		<div class="details-line hide"></div>
+		<div class="under-line"></div>
+		<i class="glyphicon glyphicon-plus expand-details detail-icons hide"></i>
+		<i class="glyphicon glyphicon-minus minimize-details detail-icons hide"></i>
 	</div>
 
 <% end %>
