--- a/app/views/static_pages/search.js.erb
+++ b/app/views/static_pages/search.js.erb
@@ -3,3 +3,14 @@ $('.cost').replaceWith("<a class='edit-price'href='/business_cards/<%= j @id %>/
 $('.overhead').replaceWith("<span class='overhead'>- $<%= j overhead %></span>");
 $('.margin').replaceWith("<span class='margin'>$<%= j margin %></span>");
 console.log("<%= j @price %>");
+
+
+$('i.expand-details').removeClass("hide");
+$('.details-line').removeClass("hide");
+$('.under-line').addClass("hide");
+
+$('i.detail-icons').click(function() {
+  $('.details').toggleClass( "hide" );
+  $('i.detail-icons').toggleClass( "hide" );
+});
+
