Complete styling on search form.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
-<footer class="footer">
-	<small>
-		Contact the <%= link_to "administrator", '#' %> to report any issues.
-	</small>
-	<nav>
+<!-- <footer class="footer"> -->
+	<nav class="navbar container bottom-navbar">
+		<small>
+			Contact the <%= link_to "administrator", '#' %> to report any issues.
+		</small>
 		<ul>
 			<li><%= link_to "About",   about_path %></li>
 			<li><%= link_to "Contact", contact_path %></li>
 		</ul>
 	</nav>
-</footer>
+<!-- </footer> -->
 
 
