--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
 			<% end %>
 
 			<div class="search-form">
-					<h1 class="text-center">Search</h1>
+					<h1 class="text-center main-header">Search</h1>
 					<%= render 'search_form' %>
 			</div>
 
