--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-inverse top-navbar">
 	<div class="container">
+		<%= link_to image_tag("Logo_Large.png", alt: "Shitter logo"), root_path, id: "logo-img" %>
 		<%= link_to "Price Checker", root_path, id: "logo" %>
 		<nav>
 			<ul class="nav navbar-nav navbar-right">
