--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,19 +9,23 @@
 	  <%= render 'layouts/shim' %>
 	</head>
 	<body ng-app="bcApp">
-		<%= render 'layouts/header' %>
-		<div class="container">
-			<div class="page-content col-sm-6 col-sm-offset-3">
+		<div class="main-container">
+			<%= render 'layouts/header' %>
+			<div class="container">
+				<div class="page-content col-sm-6 col-sm-offset-3">
 
-				<% flash.each do |message_type, message| %>
-					<div class="alert alert-<%= message_type %>"><%= message %></div>
-				<% end %>
+					<% flash.each do |message_type, message| %>
+						<div class="alert alert-<%= message_type %>"><%= message %></div>
+					<% end %>
 
-				<%= yield %>
+					<%= yield %>
 
+				</div>
 			</div>
-			<%= render 'layouts/footer' %>
 		</div>
+			<!-- <div class="push"></div> -->
+			<%= render 'layouts/footer' %>
 	</body>
+	</div>
 </html>
 
