--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,22 @@ html, body {
   /* The html and body elements cannot have any padding or margin. */
 }
 
+.error, .alert-error {
+	color: #ff3300;
+}
+
+.alert {
+	font-size: 1.3em;
+}
+
+.alert-success {
+	background-color: transparent;
+	border-color: none;
+	border: none; 
+	color: #3277b3; /*blue*/
+	/*color: #00cc00;*/ /*green*/
+}
+
 .main-container {
   min-height: 100%;
   height: auto !important;
@@ -121,11 +137,24 @@ p {
   font-size: 2.6em;
 }
 
+.similar-header {
+	margin-top: 120px;
+}
+
+.similar-product-table {
+	border-top: 6px solid #e6e6e6;
+	margin-bottom: 60px;
+}
+
+.similar-price {
+	font-weight: bold;
+}
+
 .page-content {
 	margin-bottom: 100px;
 }
 
-.search-form-group {
+.search-form-group, .new-form-group {
 	width: 100%;
 	height: 40px;
 	margin-bottom: 19px;
@@ -155,6 +184,9 @@ p {
 		border: none;
 		box-shadow: none;
 	}
+	.new-bc-text-field:focus {
+		border: 1px solid #ccc;
+	}
 }
 
 label {
@@ -162,9 +194,14 @@ label {
 	font-size: 1.1em;
 }
 
-.search-form-control {
+.search-form-control, .new-form-control {
 	float: right;
 	width: auto;
+}
+
+.new-bc-text-field {
+	width: 100px;
+	text-align: right;
 }
 
 .edit {
