--- a/app/views/business_cards/edit.html.erb
+++ b/app/views/business_cards/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Business Card</h1>
+<h1 class="text-center main-header">Edit Price</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @business_card %> |
-<%= link_to 'Back', business_cards_path %>
+
