--- a/app/views/static_pages/_load_more_form.html.erb
+++ b/app/views/static_pages/_load_more_form.html.erb
@@ -56,7 +56,7 @@
 
 	<br>
 
-	<%= submit_tag 'Load More', class: "btn btn-primary btn-block" %>
+	<%= submit_tag 'Load More', class: "btn btn-style btn-block" %>
 
 <% end %>
 
