--- a/app/views/dimensions/new.html.erb
+++ b/app/views/dimensions/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Dimension</h1>
+<h1 class="main-header">New Dimension</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', dimensions_path %>
