--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -386,36 +386,16 @@ label {
 }
 
 
+
+/* other resource pages */
+
+
+.index-tables {
+	border-top: 6px solid #e6e6e6;
+}
+
+
 /* footer */
-
-/*footer {
-  position: absolute;
-  bottom: 0;
-	clear: both;
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px solid $gray-medium-light;
-  height: 80px;
-  color: $gray-light;
-  a {
-    color: $gray;
-    &:hover {
-      color: $gray-darker;
-    }
-  }
-  small {
-    float: left;
-  }
-  ul {
-    float: right;
-    list-style: none;
-    li {
-      float: left;
-      margin-left: 15px;
-    }
-  }
-}*/
-
 
 .navbar {
 	border-right: none;
