--- a/app/views/coatings/edit.html.erb
+++ b/app/views/coatings/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Coating</h1>
+<h1 class="main-header">Editing Coating</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @coating %> |
-<%= link_to 'Back', coatings_path %>
+
