--- a/app/views/dimensions/_form.html.erb
+++ b/app/views/dimensions/_form.html.erb
@@ -1,23 +1,12 @@
 <%= form_for(@dimension) do |f| %>
-  <% if @dimension.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@dimension.errors.count, "error") %> prohibited this dimension from being saved:</h2>
-
-      <ul>
-      <% @dimension.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
   <div class="field form-group new-form-group">
     <%= f.label :width %>
-    <%= f.text_field :width, class: "new-bc-text-field edit-bc-price form-control new-form-control", value: "0", onfocus: "if (this.value=='0') this.value='';", onblur: "if (this.value=='') this.value='0';" %>
+    <%= f.text_field :width, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
   </div>
   <div class="field form-group new-form-group">
     <%= f.label :height %>
-    <%= f.text_field :height, class: "new-bc-text-field edit-bc-price form-control new-form-control", value: "0", onfocus: "if (this.value=='0') this.value='';", onblur: "if (this.value=='') this.value='0';" %>
+    <%= f.text_field :height, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
   </div>
   <%= f.submit 'Submit', class: "btn small-btn-style" %>
 <% end %>
