--- a/app/views/quantities/edit.html.erb
+++ b/app/views/quantities/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Quantity</h1>
+<h1 class="main-header">Editing Quantity</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @quantity %> |
-<%= link_to 'Back', quantities_path %>
+
