--- a/app/views/quantities/index.html.erb
+++ b/app/views/quantities/index.html.erb
@@ -1,27 +1,14 @@
-<p id="notice"><%= notice %></p>
+<h1 class="main-header">Listing Quantities</h1>
 
-<h1>Listing Quantities</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Quantity</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<table class="table index-tables">
   <tbody>
     <% @quantities.each do |quantity| %>
       <tr>
         <td><%= quantity.quantity %></td>
-        <td><%= link_to 'Show', quantity %></td>
-        <td><%= link_to 'Edit', edit_quantity_path(quantity) %></td>
-        <td><%= link_to 'Destroy', quantity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="text-right"><%= link_to 'Edit', edit_quantity_path(quantity) %> <%= link_to 'Delete', quantity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Quantity', new_quantity_path %>
+<%= button_to 'New Quantity', new_quantity_path, method: :get, class: "btn-style" %>
