--- a/app/views/quantities/new.html.erb
+++ b/app/views/quantities/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Quantity</h1>
+<h1 class="main-header">New Quantity</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', quantities_path %>
+
