--- a/app/views/box_counts/edit.html.erb
+++ b/app/views/box_counts/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Box Count</h1>
+<h1 class="main-header">Editing Box Count</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @box_count %> |
-<%= link_to 'Back', box_counts_path %>
+
