--- a/app/views/box_counts/index.html.erb
+++ b/app/views/box_counts/index.html.erb
@@ -1,27 +1,14 @@
-<p id="notice"><%= notice %></p>
+<h1 class="main-header">Listing Box Counts</h1>
 
-<h1>Listing Box Counts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Box count</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<table class="table index-tables">
   <tbody>
     <% @box_counts.each do |box_count| %>
       <tr>
-        <td><%= box_count.box_count %></td>
-        <td><%= link_to 'Show', box_count %></td>
-        <td><%= link_to 'Edit', edit_box_count_path(box_count) %></td>
-        <td><%= link_to 'Destroy', box_count, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= pluralize(box_count.box_count, "Box") %></td>
+        <td class="text-right"><%= link_to 'Edit', edit_box_count_path(box_count) %> <%= link_to 'Delete', box_count, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Box count', new_box_count_path %>
+<%= button_to 'New Box Count', new_box_count_path, method: :get, class: "btn-style" %>
