--- a/app/views/box_counts/new.html.erb
+++ b/app/views/box_counts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Box Count</h1>
+<h1 class="main-header">New Box Count</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', box_counts_path %>
+
