Style metals pages.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,6 +29,10 @@ html, body {
 	font-size: 1.3em;
 }
 
+.alert-notice {
+	color: #3277b3;
+}
+
 .alert-success {
 	background-color: transparent;
 	border-color: none;
