--- a/app/views/dimensions/index.html.erb
+++ b/app/views/dimensions/index.html.erb
@@ -4,7 +4,7 @@
   <tbody>
     <% @dimensions.each do |dimension| %>
       <tr>
-        <td><%= trim(dimension.width) %>" x <%= trim(dimension.height) %>"</td>
+        <td><%= trim(dimension.width) %> x <%= trim(dimension.height) %></td>
         <td class="text-right"><span><%= link_to 'Edit', edit_dimension_path(dimension) %> <%= link_to 'Delete', dimension, method: :delete, data: { confirm: 'Are you sure?' } %></span></td>
       </tr>
     <% end %>
