--- a/app/views/metals/_form.html.erb
+++ b/app/views/metals/_form.html.erb
@@ -1,25 +1,15 @@
 <%= form_for(@metal) do |f| %>
-  <% if @metal.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@metal.errors.count, "error") %> prohibited this metal from being saved:</h2>
 
-      <ul>
-      <% @metal.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :front %><br>
-    <%= f.text_field :front %>
+  <div class="field form-group new-form-group">
+    <%= f.label :front %>
+    <%= f.text_field :front, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :back %><br>
-    <%= f.text_field :back %>
+  <div class="field form-group new-form-group">
+    <%= f.label :back %>
+    <%= f.text_field :back, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.submit 'Submit', class: "btn small-btn-style" %>
 <% end %>
+
+<%= button_to 'Cancel', metals_path, method: :get, class: "btn small-btn-style cancel" %>
+
