--- a/app/views/metals/edit.html.erb
+++ b/app/views/metals/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Metal</h1>
+<h1 class="main-header">Editing Metal</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @metal %> |
-<%= link_to 'Back', metals_path %>
+
+
