Style paper_types pages.

--- a/app/views/paper_types/_form.html.erb
+++ b/app/views/paper_types/_form.html.erb
@@ -1,33 +1,22 @@
 <%= form_for(@paper_type) do |f| %>
-  <% if @paper_type.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@paper_type.errors.count, "error") %> prohibited this paper_type from being saved:</h2>
-
-      <ul>
-      <% @paper_type.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
   <div class="field hidden">
-    <%= f.label :brand %><br>
+    <%= f.label :brand %>
     <%= f.text_field :brand %>
   </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="field form-group new-form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :color %><br>
-    <%= f.text_field :color %>
+  <div class="field form-group new-form-group">
+    <%= f.label :color %>
+    <%= f.text_field :color, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :thickness %><br>
-    <%= f.text_field :thickness %>
+  <div class="field form-group new-form-group">
+    <%= f.label :thickness %>
+    <%= f.text_field :thickness, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.submit 'Submit', class: "btn small-btn-style" %>
 <% end %>
+
+<%= button_to 'Cancel', paper_types_path, method: :get, class: "btn small-btn-style cancel" %>
