--- a/app/views/paper_types/index.html.erb
+++ b/app/views/paper_types/index.html.erb
@@ -1,33 +1,17 @@
-<p id="notice"><%= notice %></p>
+<h1 class="main-header">Listing Paper Types</h1>
 
-<h1>Listing Paper Types</h1>
-
-<table>
-  <thead>
-    <tr>
-      <!-- <th>Brand</th> -->
-      <th>Name</th>
-      <th>Color</th>
-      <th>Thickness</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<table class="table index-tables">
   <tbody>
     <% @paper_types.each do |paper_type| %>
       <tr>
         <!-- <td><%= paper_type.brand %></td> -->
-        <td><%= paper_type.name %></td>
-        <td><%= paper_type.color %></td>
-        <td><%= paper_type.thickness %></td>
-        <td><%= link_to 'Show', paper_type %></td>
-        <td><%= link_to 'Edit', edit_paper_type_path(paper_type) %></td>
-        <td><%= link_to 'Destroy', paper_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= paper_type.name %> / <%= paper_type.color %> / <%= paper_type.thickness %>lb</td>
+        <td class="text-right"><%= link_to 'Edit', edit_paper_type_path(paper_type) %> <%= link_to 'Destroy', paper_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Paper type', new_paper_type_path %>
+<%= button_to 'New Paper Type', new_paper_type_path, method: :get, class: "btn-style" %>
+
