--- a/app/views/paper_types/new.html.erb
+++ b/app/views/paper_types/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Paper Type</h1>
+<h1 class="main-header">New Paper Type</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', paper_types_path %>
+
