--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -506,6 +506,11 @@ input {
   ul {
     color: red;
     margin: 0 0 30px 0;
+    text-align: center;
+    text-decoration: none;
+    list-style: none;
+    padding-left: 0px;
+    line-height: 3em;
   }
 }
 
@@ -529,6 +534,13 @@ input {
   width: auto;
   margin-left: 0;
 }
+
+
+.field_with_errors {
+	display: inline;
+}
+
+
 
 
 /* Users Index */
