--- a/app/views/box_counts/_form.html.erb
+++ b/app/views/box_counts/_form.html.erb
@@ -1,5 +1,17 @@
 <%= form_for(@box_count) do |f| %>
 
+	<% if @box_count.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@box_count.errors.count, "error") %> prohibited these dimensions from being saved:</h2>
+
+      <ul>
+      <% @box_count.errors.full_messages.each do |message| %>
+        <li><%= message %>!</li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="field form-group new-form-group">
     <%= f.label :box_count, class: "capitalize" %>
     <%= f.text_field :box_count, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
