--- a/app/views/quantities/_form.html.erb
+++ b/app/views/quantities/_form.html.erb
@@ -1,5 +1,17 @@
 <%= form_for(@quantity) do |f| %>
 
+	<% if @quantity.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@quantity.errors.count, "error") %> prohibited these dimensions from being saved:</h2>
+
+      <ul>
+      <% @quantity.errors.full_messages.each do |message| %>
+        <li><%= message %>!</li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="field form-group new-form-group">
     <%= f.label :quantity %>
     <%= f.text_field :quantity, class: "new-bc-text-field edit-bc-price form-control new-form-control" %>
