--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -167,12 +167,17 @@ p {
 	margin-bottom: 100px;
 }
 
+.search h3, .search h5 {
+	font-weight: bold;
+}
+
 .search-form-group, .new-form-group {
 	width: 100%;
 	height: 40px;
 	margin-bottom: 19px;
 	label {
 		margin-top: 7px;
+		font-size: 1.3em;
 	}
 	select, option {
 		/*color: #337ab7;*/ /*light blue*/
@@ -184,7 +189,7 @@ p {
 		font-weight: bold;
 		cursor: pointer;
 		letter-spacing: .5px;
-		font-size: 1.1em;
+		font-size: 1.3em;
 		/*text-decoration: underline;*/
 	}
 	select {
@@ -200,6 +205,10 @@ p {
 	.new-bc-text-field:focus {
 		border: 1px solid #ccc;
 	}
+}
+
+.paper-type {
+	margin-bottom: 55px;
 }
 
 label {
