Add more complete validations to main business card form.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,6 +41,11 @@ html, body {
 	/*color: #00cc00;*/ /*green*/
 }
 
+.business-card-errors ul {
+	list-style: none;
+	padding: 0;
+}
+
 .capitalize {
 	text-transform: capitalize;
 }
