--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,8 @@
 						<div class="text-center alert alert-<%= message_type %>"><%= message %></div>
 					<% end %>
 
+					<h1><%= flash.count %></h1>
+
 					<%= yield %>
 
 				</div>
