Add flash error for incorrect values on main search form.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,7 @@
 						<% end %>
 						<div class="text-center alert alert-<%= message_type %>"><%= message %></div>
 					<% end %>
-
-					<h1><%= flash.count %></h1>
+					<div class="select-error text-center"></div>
 
 					<%= yield %>
 
