--- a/app/views/static_pages/_load_more_form.html.erb
+++ b/app/views/static_pages/_load_more_form.html.erb
@@ -50,7 +50,7 @@
 		<%= select_tag 'metal_id', options_for_select(metals), {"ng-model" => "data.metal_id", "class" => "form-control"} %>
 	</div>
 
-	<div class="form-group hide">
+	<div class="form-group">
 		<%= text_field_tag :index, nil, class: "index-field form-control index-field" %>
 	</div>
 
