--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,14 +9,14 @@
 			</div>
 
 			<div class="new-bc-form hide">
-			<!-- <div class="new-bc-form"> -->
 				<h1 class="text-center main-header">Enter New BC</h1>
 				<%= render 'new_bc_form' %>
-
-				<div class="similar-products"></div>
-
-				<%= render 'load_more_form' %>
 			</div>
+			
+			<h3 class="text-center similar-header main-header hide">Similar Products</h3>
+			<div class="similar-products"></div>
+			<%= render 'load_more_form' %>
+
 		</div>
 	</div>
 
