Resolve bug with flash messages remaining after submitting search.

--- a/app/views/static_pages/_search_form.html.erb
+++ b/app/views/static_pages/_search_form.html.erb
@@ -52,7 +52,7 @@
 		<%= select_tag 'paper_type_id', options_for_select(paper_types), {"ng-model" => "data.paper_type_id", "class" => "form-control search-form-control", 'dir' => 'rtl'} %>
 	</div>
 
-	<%= submit_tag 'Search', class: "btn small-btn-style homepage-button" %>
+	<%= submit_tag 'Search', class: "btn small-btn-style homepage-button small-btn-search" %>
 
 <% end %>
 
