Add client side validations for main search form.

--- a/app/views/static_pages/new_bc.js.erb
+++ b/app/views/static_pages/new_bc.js.erb
@@ -2,6 +2,7 @@ $('.search-form').addClass("hide");
 $('.new-bc-form').removeClass("hide");
 $('.similar-header').removeClass("hide");
 $('.similar-products').append("<%= j similar_products( @similar ) %>");
+$('.alert').empty();
 $('.alert-error').empty();
 
 if ( parseInt("<%= @count %>") <= 5) {
