Add client side validation for new-bc-form submissions.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,20 +15,22 @@
 			<div class="container">
 				<div class="page-content col-sm-6 col-sm-offset-3">
 
-					<% flash.each do |message_type, message| %>
-						<% if message.class == Hash %>
-							<div class="text-center business-card-errors">
-					    	<ul>
-						      <% message.each do |type, msg| %>
-						        <li>Please include the <%= type %>!</li>
-						      <% end %>
-					      </ul>
-					    </div>
-					    <% next %>
+					<% unless flash[:error_redirect] == true %>
+						<% flash.each do |message_type, message| %>
+							<% if message.class == Hash %>
+								<div class="text-center business-card-errors">
+						    	<ul>
+							      <% message.each do |type, msg| %>
+							        <li>Please include the <%= type %>!</li>
+							      <% end %>
+						      </ul>
+						    </div>
+						    <% next %>
+							<% end %>
+							<div class="text-center alert alert-<%= message_type %>"><%= message %></div>
 						<% end %>
-						<div class="text-center alert alert-<%= message_type %>"><%= message %></div>
-					<% end %>
-					<div class="select-error text-center"></div>
+						<div class="select-error text-center"></div>
+					<%end %>
 
 					<%= yield %>
 
