--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
 			</div>
 
 			<div class="new-bc-form hide">
-				<h1 class="text-center main-header">Enter New BC</h1>
+				<!-- <h1 class="text-center main-header">Enter New BC</h1> -->
 				<%= render 'new_bc_form' %>
 			</div>
 			
